force-app/main/default/objects/FieloEE__Redemption__c/FieloEE__Redemption__c.object-meta.xml
<CustomObject>
    <description>Redemption orders as well as open shopping carts.</description>
    <label>Redemption</label>
    <nameField>
        <displayFormat>OR-{000000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Redemption</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>