force-app/main/default/objects/FieloEE__Redemption__c/fields/FieloEE__Member__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Member__c</fullName>
    <description>Member who redeemed the reward</description>
    <label>Member</label>
    <referenceTo>FieloEE__Member__c</referenceTo>
    <relationshipLabel>Redemptions</relationshipLabel>
    <relationshipName>Redemptions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>