force-app/main/default/objects/FieloEE__Redemption__c/fields/FieloEE__Origin__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Origin__c</fullName>
    <description>Where the redemption was made: in the back end, in the front end or via a mobile device.</description>
    <inlineHelpText>Indicate whether the redemption was made via the back end, the front end or a mobile device.</inlineHelpText>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BackEnd</fullName>
            </value>
            <value>
                <fullName>FrontEnd</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>