force-app/main/default/objects/FieloEE__Redemption__c/fields/FieloEE__Points__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Points__c</fullName>
    <description>Points involved on the redemption</description>
    <label>Points</label>
    <summarizedField>FieloEE__RedemptionItem__c.FieloEE__ItemPoints__c</summarizedField>
    <summaryFilterItems>
        <field>FieloEE__RedemptionItem__c.FieloEE__Status__c</field>
        <operation>notEqual</operation>
        <value>Reverted</value>
    </summaryFilterItems>
    <summaryForeignKey>FieloEE__RedemptionItem__c.FieloEE__Redemption__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>