force-app/main/default/objects/FieloEE__Redemption__c/fields/FieloEE__PointsDiscount__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__PointsDiscount__c</fullName>
    <label>Points Discount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>