force-app/main/default/objects/FieloEE__Redemption__c/fields/FieloEE__Price__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Price__c</fullName>
    <description>Price of the reward in the moment that the reward was redeemed.</description>
    <label>Price</label>
    <summarizedField>FieloEE__RedemptionItem__c.FieloEE__RewardItemPrice__c</summarizedField>
    <summaryForeignKey>FieloEE__RedemptionItem__c.FieloEE__Redemption__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>