force-app/main/default/objects/FieloEE__Redemption__c/fields/FieloEE__Processed__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>