force-app/main/default/objects/FieloEE__Redemption__c/fields/FieloEE__Status__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Status__c</fullName>
    <description>The status of this redemption. Possible status values are: Open, Closed, Pending or Rejected.</description>
    <inlineHelpText>Here you can see the redemption status. Redemptions can be Open, Closed, Pending or Rejected. Press the Help button above for more info.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>