force-app/main/default/objects/FieloEE__Redemption__c/fields/FieloEE__TotalItems__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__TotalItems__c</fullName>
    <description>Quantity of items of the redemption (Order).</description>
    <label>Total Items</label>
    <summaryForeignKey>FieloEE__RedemptionItem__c.FieloEE__Redemption__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>