force-app/main/default/objects/FieloEE__Redemption__c/validationRules/FieloEE__Closed_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__Closed_Order</fullName>
    <active>false</active>
    <errorConditionFormula>AND(   ISPICKVAL(FieloEE__Status__c, &#39;Close&#39;) ,ISCHANGED(FieloEE__Points__c) )</errorConditionFormula>
    <errorMessage>The order is closed.</errorMessage>
</ValidationRule>