force-app/main/default/objects/FieloEE__Redemption__c/listViews/FieloEE__All_Redemptions.listView-meta.xml
<ListView>
    <fullName>FieloEE__All_Redemptions</fullName>
    <columns>NAME</columns>
    <columns>FieloEE__Member__c</columns>
    <columns>FieloEE__TotalItems__c</columns>
    <columns>FieloEE__Origin__c</columns>
    <columns>FieloEE__Points__c</columns>
    <columns>FieloEE__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Redemptions</label>
    <language>en_US</language>
</ListView>