force-app/main/default/objects/FieloEE__Redemption__c/listViews/FieloEE__Pending.listView-meta.xml
<ListView>
    <fullName>FieloEE__Pending</fullName>
    <columns>NAME</columns>
    <columns>FieloEE__Member__c</columns>
    <columns>FieloEE__Origin__c</columns>
    <columns>FieloEE__Points__c</columns>
    <columns>FieloEE__Price__c</columns>
    <columns>FieloEE__Status__c</columns>
    <columns>FieloEE__TotalItems__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FieloEE__Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending</label>
    <language>en_US</language>
</ListView>