force-app/main/default/objects/FieloEE__Redemption__c/listViews/FieloEE__This_Week.listView-meta.xml
<ListView>
    <fullName>FieloEE__This_Week</fullName>
    <columns>NAME</columns>
    <columns>FieloEE__Member__c</columns>
    <columns>FieloEE__Origin__c</columns>
    <columns>FieloEE__Points__c</columns>
    <columns>FieloEE__Price__c</columns>
    <columns>FieloEE__Status__c</columns>
    <columns>FieloEE__TotalItems__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>This Week</label>
    <language>en_US</language>
</ListView>